# M9A

./: .editorconfig  .gitattributes  .gitignore  .npmrc  .prettierignore  CONTRIBUTING.md  interface.json  maatools.config.mts  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md  cliff.toml
.github/workflows/: activity-data-update.yml  check.yml  format.yml  install.yml  lint.yml  optimize-img.yml  sync-to-m9a-api.yml  sync_schema_files.yml  update-mojing-tjb.yml
agent/: bootstrap.py  main.py
agent/custom/action/: activity.py  balanced_farming.py  combat.py  redeem_code.py  syndrome_of_silence.py
agent/utils/: runtime_paths.py  version_checker.py
assets/: interface.json
assets/resource/base/pipeline/: combat.json
assets/resource/data/activity/: tw.json
docs/en_us/develop/: doc.md  interface.md  packaging.md  structure.md  uv-agent-migration.md
docs/en_us/protocol/: activity.md  combat.md  items.md  sos.md
docs/zh_cn/develop/: doc.md  interface.md  packaging.md  structure.md  template-restructure-migration.md  uv-agent-migration.md
docs/zh_cn/protocol/: activity.md  auto-promotion.md  combat.md  items.md  sos.md
resource/base/pipeline/: startup.json
resource/base/pipeline/activity/: CompleteInduction.json
resource/base/pipeline/wilderness/: good_dream_well.json  product.json
tasks/: Awards.json  Bank.json  Close1999.json  Colosseum.json  CompleteInduction.json  CritterCrash.json  Limbo.json  Lucidscape.json  PreStormProtocol.json  Psychube.json  RedeemCode.json  SSReopen.json  SeriesOfDusks.json  StartUp.json  SwitchAccount.json  SwitchFramework.json  TheAlarm.json  UTTU.json  Wilderness.json
tests/: test_agent_bootstrap.py  test_agent_runtime.py  test_release_agent_config.py  test_runtime_paths.py  test_source_layout.py
tools/: run-uv.mjs  source_layout.py  sync-schema.mjs  validate-schema.mjs  validate_schema.py
tools/activity_data/: main.py
tools/ci/: configure.py  generate_manifest_cache.py  install.py  install_cli.py  install_mxu.py  release_agent.py  setup_embed_python.py
tools/image/: process.ps1
tools/optimize_templates/: optimize_templates.py
