[project]
name = "m9a"
version = "0.0.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "maafw==v5.10.4",
    "loguru",
    "pillow",
    "pytz",
    "requests",
]

[dependency-groups]
dev = [
    "black",
    "ruff",
    "pytest",
    "pyright",
]

[tool.uv]
package = false

[tool.black]
extend-exclude = '''
/(
    \.venv
  | \.venv-linux
  | \.uv-cache
  | node_modules
  | deps
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".venv", ".venv-linux", "tools/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E402",   # module level import not at top (sys.path manipulation)
    "E501",   # line too long (black handles formatting)
    "SIM102", # nested if (readability preference)
    "SIM108", # ternary operator (readability preference)
    "SIM110", # all()/any() (readability preference)
    "SIM117", # nested with (readability preference)
    "SIM118", # key in dict (not always applicable)
]

[tool.ruff.lint.per-file-ignores]
"agent/utils/__init__.py" = ["F403", "F405", "F401"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeArgument = "none"
reportMissingParameterType = "none"
reportUnusedFunction = "none"
reportUnusedImport = "none"
reportUnusedVariable = "none"
reportPrivateUsage = "none"
reportConstantRedefinition = "none"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryComparison = "none"
reportPossiblyUnboundVariable = "none"
reportArgumentType = "none"
reportIndexIssue = "none"
reportCallIssue = "none"
reportGeneralTypeIssues = "none"
reportAttributeAccessIssue = "none"
reportIncompatibleVariableOverride = "none"
reportFunctionMemberAccess = "none"
exclude = [
    ".venv",
    ".venv-linux",
    "**/node_modules",
    "**/__pycache__",
    ".*",
    "tmp",
    "tools",
    "deps",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
